# CommunityNotes-CiteNet

./: README.md  pyproject.toml
data/processed/: helpful_score.csv  media_bias_score.csv  notes_2024.csv  notes_2024_fqdn.csv  notes_2024_fqdn_selected.csv  notes_2024_fqdn_selected_with_classification.csv
notebook/: 1_data_cleaning.ipynb  2_data_screening.ipynb  3_1_mbfc_comparison.ipynb  3_factuality_bias.ipynb  4_network.ipynb
src/llm/inference/: llm_inference_gemini.py
